--- a/JogoDaVelha.html
+++ b/JogoDaVelha.html
@@ -1,5 +1,4 @@
-﻿<!DOCTYPE html>
-<html>
+﻿<html>
   <head>
     <meta charset="utf-8">
     <title></title>
@@ -30,6 +29,7 @@
         {
           arr[tid]=1;
           document.getElementById(tid).innerHTML = '<h1>X</h1>';
+	  verifWin();
           iaplay();
         }
 
@@ -266,9 +266,153 @@
         {
             arr[4]=0;document.getElementById('4').innerHTML = '<h1>O</h1>';
         }
-        else
+        else if(arr[4]==0)
+	{
+		jogou=false;
+		if(arr[0]==1 && arr[5]==1)
+            	{
+                    	if(arr[2]==-1 && jogou==false)
+                    		{
+                        	arr[2]=0;document.getElementById(2).innerHTML = '<h1>O</h1>';jogou=true;
+                    		}
+     		}
+		if(arr[0]==1 && arr[7]==1)
+            	{
+                    	if(arr[6]==-1 && jogou==false)
+                    		{
+                        	arr[6]=0;document.getElementById(6).innerHTML = '<h1>O</h1>';jogou=true;
+                    		}
+     		}
+		if(arr[2]==1 && arr[3]==1)
+            	{
+                    	if(arr[0]==-1 && jogou==false)
+                    		{
+                        	arr[0]=0;document.getElementById(0).innerHTML = '<h1>O</h1>';jogou=true;
+                    		}
+     		}
+		if(arr[2]==1 && arr[7]==1)
+            	{
+                    	if(arr[8]==-1 && jogou==false)
+                    		{
+                        	arr[8]=0;document.getElementById(8).innerHTML = '<h1>O</h1>';jogou=true;
+                    		}
+     		}
+		if(arr[6]==1 && arr[1]==1)
+            	{
+                    	if(arr[0]==-1 && jogou==false)
+                    		{
+                        	arr[0]=0;document.getElementById(0).innerHTML = '<h1>O</h1>';jogou=true;
+                    		}
+     		}
+		if(arr[6]==1 && arr[5]==1)
+            	{
+                    	if(arr[8]==-1 && jogou==false)
+                    		{
+                        	arr[8]=0;document.getElementById(8).innerHTML = '<h1>O</h1>';jogou=true;
+                    		}
+     		}
+		if(arr[8]==1 && arr[1]==1)
+            	{
+                    	if(arr[2]==-1 && jogou==false)
+                    		{
+                        	arr[2]=0;document.getElementById(2).innerHTML = '<h1>O</h1>';jogou=true;
+                    		}
+     		}
+		if(arr[8]==1 && arr[3]==1)
+            	{
+                    	if(arr[6]==-1 && jogou==false)
+                    		{
+                        	arr[6]=0;document.getElementById(6).innerHTML = '<h1>O</h1>';jogou=true;
+                    		}
+     		}
+		
+		if(arr[1]==1 && arr[3]==1)
+            	{
+                    if(arr[0]==-1 && jogou==false)
+                    {
+                        arr[0]=0;document.getElementById(0).innerHTML = '<h1>O</h1>';jogou=true;
+                    }
+            	}
+		if(arr[1]==1 && arr[5]==1)
+            	{
+                    if(arr[2]==-1 && jogou==false)
+                    {
+                        arr[2]=0;document.getElementById(2).innerHTML = '<h1>O</h1>';jogou=true;
+                    }
+            	}
+		if(arr[3]==1 && arr[7]==1)
+            	{
+                    if(arr[6]==-1 && jogou==false)
+                    {
+                        arr[6]=0;document.getElementById(6).innerHTML = '<h1>O</h1>';jogou=true;
+                    }
+            	}
+		if(arr[5]==1 && arr[7]==1)
+            	{
+                    if(arr[8]==-1 && jogou==false)
+                    {
+                        arr[8]=0;document.getElementById(8).innerHTML = '<h1>O</h1>';jogou=true;
+                    }
+            	}
+		if(jogou==false)
+		{
+                for(i=1;i<=8;i+=2)
+                    {
+		    	notpossible=true;
+                    	if(arr[i]==-1)
+                   	 {
+                    	    arr[i]=0;document.getElementById(i).innerHTML = '<h1>O</h1>';
+                    	    notpossible=false;
+				break;
+                   	 }
+                    }
+		if(notpossible)
+			{
+			for(i=0;i<=8;i+=2)
+                    	   {
+                    		if(arr[i]==-1)
+                   	 	{
+                      	    	arr[i]=0;document.getElementById(i).innerHTML = '<h1>O</h1>';
+				break;
+                 	 	}
+                    	   }
+			}
+		}
+	}
+	else if(arr[1]==1 && arr[5]==1)
             {
-                for(i=0;i<=8;i+=2)
+                    if(arr[2]==-1)
+                    {
+                        arr[2]=0;document.getElementById(2).innerHTML = '<h1>O</h1>';
+                    }
+            }
+	else if(arr[3]==1 && arr[7]==1)
+            {
+                    if(arr[6]==-1)
+                    {
+                        arr[6]=0;document.getElementById(6).innerHTML = '<h1>O</h1>';
+                    }
+            }
+	else if(arr[5]==1 && arr[7]==1)
+            {
+                    if(arr[8]==-1)
+                    {
+                        arr[8]=0;document.getElementById(8).innerHTML = '<h1>O</h1>';
+                    }
+            }
+	else
+	    {	notpossible=true;
+		for(i=0;i<=8;i+=2)
+                {
+                    	if(arr[i]==-1)
+                   	{
+                      	    	arr[i]=0;document.getElementById(i).innerHTML = '<h1>O</h1>';
+				notpossible=false;
+				break;
+                	}
+                }
+		if(notpossible)
+                for(i=0;i<=8;i++)
                 {
                     if(arr[i]==-1)
                     {
@@ -277,8 +421,11 @@
                     }
                 }
             }
+	verifWin();
 
-        //win verif
+      }
+      function verifWin()
+	{
         lastMove=true;
         for(i=0;i<=8;i++)
         {
@@ -320,7 +467,8 @@
             endGame(1);
         else if(lastMove)
             endGame(-1);
-      }
+
+	}
       function endGame(result)
       { if(result==1)
             alert('Parabéns, vc ganhou!');
