--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <body>
 	<ul>
 	<li><a href="JogoDaVelha.html">Jogo da Velha</a></li>
-	<li><a href="..\Poker\public_html\index.html>Poker(needs PHP server)</a></li>
+	<li><a href="..\Poker\public_html\index.html>Poker(needs PHP server)"</a></li>
+	<li><a href="palindromo.html"</a>Plaíndromo</li>
 	</ul>
   </body>
 </html>
