--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<ul>
 	<li><a href="JogoDaVelha.html">Jogo da Velha</a></li>
 	<li><a href="..\Poker\public_html\index.html">Poker(needs PHP server)</a></li>
-	<li><a href="palindromo.html">Plaíndromo</a></li>
+	<li><a href="palindromo.htm">Plaíndromo</a></li>
 	</ul>
   </body>
 </html>
