--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<li><a href="JogoDaVelha.html">Jogo da Velha</a></li>
 	<li><a href="..\Poker\public_html\index.html">Poker(needs PHP server)</a></li>
 	<li><a href="palindromo.htm">Plaíndromo</a></li>
+	<li><a href="substr.html">Substrings</a></li>
 	</ul>
   </body>
 </html>
