added template site

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<li><a href="..\Poker\public_html\index.html">Poker(needs PHP server)</a></li>
 	<li><a href="palindromo.htm">Plaíndromo</a></li>
 	<li><a href="substr.html">Substrings</a></li>
+	<li><a href="RenanMALV.github.io/MinervaBotsSite/">Template Site MinervaBots</a></li>
 	</ul>
   </body>
 </html>
